--- a/split-the-nota-exercise/index.html
+++ b/split-the-nota-exercise/index.html
@@ -32,6 +32,6 @@
         </section>
     </main>
 
-    <script src="js/solution.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
